--- a/mesa/PKGBUILD
+++ b/mesa/PKGBUILD
@@ -7,7 +7,7 @@ pkgbase=mesa
 pkgname=(
   'vulkan-mesa-layers'
   'opencl-mesa'
-  'vulkan-intel'
+#  'vulkan-intel'
   'vulkan-radeon'
   'vulkan-swrast'
   'vulkan-virtio'
@@ -28,7 +28,7 @@ makedepends=(
   'libdrm'
   'libelf'
   'libglvnd'
-  'libunwind'
+  #'libunwind'
   'libva'
   'libvdpau'
   'libx11'
@@ -96,6 +96,8 @@ validpgpkeys=('8703B6700E7EE06D7A39B8D6EDAE37B02CEB490D'  # Emil Velikov <emil.l
               '71C4B75620BC75708B4BDB254C95FAAB3EB073EC'  # Dylan Baker <dylan@pnwbakers.com>
               '57551DE15B968F6341C248F68D8E31AFC32428A6') # Eric Engestrom <eric@engestrom.ch>
 
+options=(!lto) # LTO is bad for mesa, makes random applications crash on my system
+
 prepare() {
   cd mesa-$_mesaver
 
@@ -116,9 +118,10 @@ build() {
     --libdir=/$_libdir
     -D android-libbacktrace=disabled
     -D b_ndebug=true
+    -D b_lto=false
     -D dri3=enabled
     -D egl=enabled
-    -D gallium-drivers=r300,r600,radeonsi,nouveau,virgl,svga,swrast,i915,iris,crocus,zink,d3d12
+    -D gallium-drivers=r300,r600,radeonsi,virgl,svga,swrast,crocus,zink
     -D gallium-extra-hud=true
     -D gallium-nine=true
     -D gallium-omx=bellagio
@@ -132,8 +135,8 @@ build() {
     -D gles2=enabled
     -D glvnd=true
     -D glx=dri
-    -D intel-clc=enabled
-    -D libunwind=enabled
+    -D intel-clc=disabled
+    -D libunwind=disabled
     -D llvm=enabled
     -D lmsensors=enabled
     -D microsoft-clc=disabled
@@ -141,15 +144,19 @@ build() {
     -D platforms=x11,wayland
     -D rust_std=2021
     -D shared-glapi=enabled
-    -D valgrind=enabled
+    -D valgrind=disabled
     -D video-codecs=vc1dec,h264dec,h264enc,h265dec,h265enc
-    -D vulkan-drivers=amd,intel,intel_hasvk,swrast,virtio-experimental
-    -D vulkan-layers=device-select,intel-nullhw,overlay
+    -D vulkan-drivers=amd,swrast,virtio-experimental
+    -D vulkan-layers=device-select,overlay
+    -D vulkan-beta=true
   )
 
-  # Build only minimal debug info to reduce size
-  CFLAGS+=' -g1'
-  CXXFLAGS+=' -g1'
+  CC="gcc"
+  CXX="g++"
+  COMMON_COMPILER_FLAGS="-march=znver4 -O2 -pipe -fno-plt -Wno-ignored-qualifiers -Wno-unused-parameter -Wno-error -fstack-protector-strong"
+  CFLAGS="$COMMON_COMPILER_FLAGS " # -std=c11
+  CXXFLAGS="$COMMON_COMPILER_FLAGS " # -std=c++17
+  LDFLAGS="-Wl,-O2,--sort-common,--as-needed,-z,relro,-z,now"
 
   arch-meson mesa-$_mesaver build "${meson_options[@]}"
   meson configure build # Print config
@@ -212,24 +219,24 @@ package_opencl-mesa() {
   install -m644 -Dt "${pkgdir}/usr/share/licenses/${pkgname}" LICENSE
 }
 
-package_vulkan-intel() {
-  pkgdesc="Intel's Vulkan mesa driver"
-  depends=(
-    'libdrm'
-    'libx11'
-    'libxshmfence'
-    'systemd'
-    'wayland'
-    'zstd'
-  )
-  optdepends=('vulkan-mesa-layers: additional vulkan layers')
-  provides=('vulkan-driver')
-
-  _install fakeinstall/usr/share/vulkan/icd.d/intel_*.json
-  _install fakeinstall/$_libdir/libvulkan_intel*.so
-
-  install -m644 -Dt "${pkgdir}/usr/share/licenses/${pkgname}" LICENSE
-}
+#package_vulkan-intel() {
+#  pkgdesc="Intel's Vulkan mesa driver"
+#  depends=(
+#    'libdrm'
+#    'libx11'
+#    'libxshmfence'
+#    'systemd'
+#    'wayland'
+#    'zstd'
+#  )
+#  optdepends=('vulkan-mesa-layers: additional vulkan layers')
+#  provides=('vulkan-driver')
+#
+#  _install fakeinstall/usr/share/vulkan/icd.d/intel_*.json
+#  _install fakeinstall/$_libdir/libvulkan_intel*.so
+#
+#  install -m644 -Dt "${pkgdir}/usr/share/licenses/${pkgname}" LICENSE
+#}
 
 package_vulkan-radeon() {
   pkgdesc="Radeon's Vulkan mesa driver"
@@ -257,7 +264,7 @@ package_vulkan-swrast() {
   pkgdesc="Vulkan software rasteriser driver"
   depends=(
     'libdrm'
-    'libunwind'
+    #'libunwind'
     'libx11'
     'libxshmfence'
     'llvm-libs'
@@ -336,7 +343,7 @@ package_mesa() {
     'libdrm'
     'libelf'
     'libglvnd'
-    'libunwind'
+    #'libunwind'
     'libxdamage'
     'libxshmfence'
     'libxxf86vm'
