Building git mesa

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 /mesa/src/**
 /mesa/pkg/**
 /mesa/*.tar.*
+/mesa/mesa/**
 
 /lib32-mesa/src/**
 /lib32-mesa/pkg/**
 /lib32-mesa/*.tar.*
+/lib32-mesa/mesa/**
