--- a/mesa/PKGBUILD
+++ b/mesa/PKGBUILD
@@ -15,8 +15,7 @@ pkgname=(
   'mesa-vdpau'
   'mesa'
 )
-_mesaver=23.1.6
-pkgver=${_mesaver//-/.}.chos1
+pkgver=23.2.0_devel.173976.d3662ba461e.d41d8cd98f00b204e9800998ecf8427e
 pkgrel=2
 pkgdesc="An open-source implementation of the OpenGL specification"
 url="https://www.mesa3d.org/"
@@ -64,20 +63,24 @@ makedepends=(
 
   # gallium-omx deps
   'libomxil-bellagio'
+
+  'git'
 )
 source=(
-  https://mesa.freedesktop.org/archive/mesa-${_mesaver}.tar.xz{,.sig}
+  'mesa::git+https://gitlab.freedesktop.org/mesa/mesa.git#branch=23.2'
   LICENSE
-  0001-gamescope-limiter.patch
+  #0001-gamescope-limiter.patch
 )
-sha256sums=('f4c7fd8e7b472a88da7d83e9a48f6f3bd17d4ea2cc4386f7231b796f3964157a'
+sha256sums=(
             'SKIP'
             '7052ba73bb07ea78873a2431ee4e828f4e72bda7d176d07f770fa48373dec537'
-            'a52d664628fb6487ba2a3c3945155052dbe99b77b26792508226fb5804ab7c66')
-b2sums=('78b71ede0655e538a71d22ecbfb0bed7497c258a16ce5f7d9b627a4c9372f26292a50aec848a4923524e4862b00a6d5d3d2521b05033d9cf39d31f037bdb9254'
+            #'a52d664628fb6487ba2a3c3945155052dbe99b77b26792508226fb5804ab7c66'
+            )
+b2sums=(
         'SKIP'
         '1ecf007b82260710a7bf5048f47dd5d600c168824c02c595af654632326536a6527fbe0738670ee7b921dd85a70425108e0f471ba85a8e1ca47d294ad74b4adb'
-        'd49f6959ec89982ae7b9c9b35fe86d0c4829c30150b0aeb259c8456ad3872bc52e580c2a8651d67eeaf746597c3d90002330942eb75a472585c44831ca0a3443')
+        #'d49f6959ec89982ae7b9c9b35fe86d0c4829c30150b0aeb259c8456ad3872bc52e580c2a8651d67eeaf746597c3d90002330942eb75a472585c44831ca0a3443'
+        )
 validpgpkeys=('8703B6700E7EE06D7A39B8D6EDAE37B02CEB490D'  # Emil Velikov <emil.l.velikov@gmail.com>
               '946D09B5E4C9845E63075FF1D961C596A7203456'  # Andres Gomez <tanty@igalia.com>
               'E3E8F480C52ADD73B278EE78E1ECBE07D7D70895'  # Juan Antonio Suárez Romero (Igalia, S.L.) <jasuarez@igalia.com>
@@ -88,7 +91,7 @@ validpgpkeys=('8703B6700E7EE06D7A39B8D6EDAE37B02CEB490D'  # Emil Velikov <emil.l
 options=(!lto) # LTO is bad for mesa, makes random applications crash on my system
 
 prepare() {
-  cd mesa-$_mesaver
+  cd mesa
 
   local src
   for src in "${source[@]}"; do
@@ -141,7 +144,7 @@ build() {
   CXXFLAGS="$COMMON_COMPILER_FLAGS " # -std=c++17
   LDFLAGS="-Wl,-O2,--sort-common,--as-needed,-z,relro,-z,now"
 
-  arch-meson mesa-$_mesaver build "${meson_options[@]}"
+  arch-meson mesa build "${meson_options[@]}"
   meson configure build # Print config
   meson compile -C build
 
