--- a/mesa/PKGBUILD
+++ b/mesa/PKGBUILD
@@ -69,17 +69,17 @@ makedepends=(
 source=(
   'mesa::git+https://gitlab.freedesktop.org/Venemo/mesa.git#branch=radv_gfx11_attr_ring_bug'
   LICENSE
-  #0001-gamescope-limiter.patch
+  0001-gamescope-limiter.patch
 )
 sha256sums=(
             'SKIP'
             '7052ba73bb07ea78873a2431ee4e828f4e72bda7d176d07f770fa48373dec537'
-            #'a52d664628fb6487ba2a3c3945155052dbe99b77b26792508226fb5804ab7c66'
+            'ed0dab57c40d1b5297461546ecc79598d31e589e67261cf4dc240b922d55ff00'
             )
 b2sums=(
         'SKIP'
         '1ecf007b82260710a7bf5048f47dd5d600c168824c02c595af654632326536a6527fbe0738670ee7b921dd85a70425108e0f471ba85a8e1ca47d294ad74b4adb'
-        #'d49f6959ec89982ae7b9c9b35fe86d0c4829c30150b0aeb259c8456ad3872bc52e580c2a8651d67eeaf746597c3d90002330942eb75a472585c44831ca0a3443'
+        '3a1a9d17b03894810b879b8ea2b04d6756831737b42edf67776c36b4e5fae526e24ac808b5027bfa7f879d36d9eb407e2a71b27370889059626951755c3b2766'
         )
 validpgpkeys=('8703B6700E7EE06D7A39B8D6EDAE37B02CEB490D'  # Emil Velikov <emil.l.velikov@gmail.com>
               '946D09B5E4C9845E63075FF1D961C596A7203456'  # Andres Gomez <tanty@igalia.com>
