Install lld to be able to link with lld :O

--- a/lib32-mesa/PKGBUILD
+++ b/lib32-mesa/PKGBUILD
@@ -60,6 +60,7 @@ makedepends=(
   'xorgproto'
 
   'git'
+  'lld'
 )
 source=(
   'mesa::git+https://gitlab.freedesktop.org/mesa/mesa.git#branch=main'
