--- a/lib32-mesa/PKGBUILD
+++ b/lib32-mesa/PKGBUILD
@@ -138,7 +138,7 @@ build() {
     -D vulkan-beta=true
   )
 
-  export RUSTFLAGS="-C opt-level=3 -C target-cpu=znver4"
+  export RUSTFLAGS="$RUSTFLAGS -C target-feature=+aes,+avx512bf16,+avx512bitalg,+avx512bw,+avx512cd,+avx512dq,+avx512f,+avx512ifma,+avx512vbmi,+avx512vbmi2,+avx512vl,+avx512vnni,+avx512vpopcntdq,+bmi1,+sse4a,+sse4.1,+sse4.2,+popcnt,+lzcnt"
   export LD="lld"
   export CC="clang"
   export CXX="clang++"
