--- a/mesa/PKGBUILD
+++ b/mesa/PKGBUILD
@@ -139,8 +139,8 @@ build() {
     -D vulkan-beta=true
   )
 
-  export RUSTFLAGS="$RUSTFLAGS -C target-feature=+aes,+avx512bf16,+avx512bitalg,+avx512bw,+avx512cd,+avx512dq,+avx512f,+avx512ifma,+avx512vbmi,+avx512vbmi2,+avx512vl,+avx512vnni,+avx512vpopcntdq,+bmi1,+sse4a,+sse4.1,+sse4.2,+popcnt,+lzcnt"
-  export LD="lld"
+  #export RUSTFLAGS="$RUSTFLAGS -C target-feature=+aes,+avx512bf16,+avx512bitalg,+avx512bw,+avx512cd,+avx512dq,+avx512f,+avx512ifma,+avx512vbmi,+avx512vbmi2,+avx512vl,+avx512vnni,+avx512vpopcntdq,+bmi1,+sse4a,+sse4.1,+sse4.2,+popcnt,+lzcnt"
+  export LD="ld.lld"
   export CC="clang"
   export CXX="clang++"
   export COMMON_COMPILER_FLAGS="-march=znver4 -O2 -pipe -fno-plt -Wno-ignored-qualifiers -Wno-unused-parameter -Wno-error -fstack-protector-strong"
