--- a/mesa/PKGBUILD
+++ b/mesa/PKGBUILD
@@ -8,7 +8,6 @@ pkgname=(
   'vulkan-mesa-layers'
   'opencl-clover-mesa'
   'opencl-rusticl-mesa'
-  'vulkan-intel'
   'vulkan-radeon'
   'vulkan-swrast'
   'vulkan-virtio'
@@ -29,7 +28,6 @@ makedepends=(
   'libdrm'
   'libelf'
   'libglvnd'
-  'libunwind'
   'libva'
   'libvdpau'
   'libx11'
@@ -127,7 +125,7 @@ build() {
     -D b_ndebug=true
     -D dri3=enabled
     -D egl=enabled
-    -D gallium-drivers=r300,r600,radeonsi,nouveau,virgl,svga,swrast,i915,iris,crocus,zink,d3d12
+    -D gallium-drivers=radeonsi,virgl,svga,swrast,crocus,zink,d3d12
     -D gallium-extra-hud=true
     -D gallium-nine=true
     -D gallium-omx=bellagio
@@ -142,7 +140,7 @@ build() {
     -D glvnd=true
     -D glx=dri
     -D intel-clc=enabled
-    -D libunwind=enabled
+    -D libunwind=disabled
     -D llvm=enabled
     -D lmsensors=enabled
     -D microsoft-clc=disabled
@@ -151,9 +149,11 @@ build() {
     -D rust_std=2021
     -D shared-glapi=enabled
     -D valgrind=enabled
-    -D video-codecs=vc1dec,h264dec,h264enc,h265dec,h265enc
-    -D vulkan-drivers=amd,intel,intel_hasvk,swrast,virtio
-    -D vulkan-layers=device-select,intel-nullhw,overlay
+    -D video-codecs=vc1dec,h264dec,h264enc,h265dec,h265enc,av1dec,av1enc,vp9dec
+    -D vulkan-drivers=amd,intel,swrast,virtio
+    -D vulkan-layers=device-select,overlay
+    -D vulkan-beta=true
+    -D opencl-spirv=true
   )
 
   # Build only minimal debug info to reduce size
@@ -245,26 +245,6 @@ package_opencl-rusticl-mesa() {
 
   _install fakeinstall/etc/OpenCL/vendors/rusticl.icd
   _install fakeinstall/$_libdir/libRusticlOpenCL*
-
-  install -m644 -Dt "${pkgdir}/usr/share/licenses/${pkgname}" LICENSE
-}
-
-package_vulkan-intel() {
-  pkgdesc="Intel's Vulkan mesa driver"
-  depends=(
-    'libdrm'
-    'libx11'
-    'libxshmfence'
-    'systemd'
-    'wayland'
-    'xcb-util-keysyms'
-    'zstd'
-  )
-  optdepends=('vulkan-mesa-layers: additional vulkan layers')
-  provides=('vulkan-driver')
-
-  _install fakeinstall/usr/share/vulkan/icd.d/intel_*.json
-  _install fakeinstall/$_libdir/libvulkan_intel*.so
 
   install -m644 -Dt "${pkgdir}/usr/share/licenses/${pkgname}" LICENSE
 }
@@ -377,7 +357,6 @@ package_mesa() {
     'libdrm'
     'libelf'
     'libglvnd'
-    'libunwind'
     'libxdamage'
     'libxshmfence'
     'libxxf86vm'
