--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,7 +34,9 @@ jobs:
           pacman-key --populate archlinux
           mkdir -p /etc/gnupg && echo "auto-key-retrieve" >> /etc/gnupg/gpg.conf
           echo -e "[multilib]\nInclude = /etc/pacman.d/mirrorlist\n" >> /etc/pacman.conf
-          pacman -S --noconfirm git
+      - name: Set up git
+        run: |
+          pacman -Syu --noconfirm git 
       - name: Generate .SRCINFO
         run: |
           su build bash -c "cd /home/build/mesa && makepkg --printsrcinfo > /home/build/mesa/.SRCINFO"
