--- a/mesa/PKGBUILD
+++ b/mesa/PKGBUILD
@@ -15,7 +15,7 @@ pkgname=(
   'mesa-vdpau'
   'mesa'
 )
-pkgver=24.0.0_devel.181988.9ca9b674462.d954e6c2b60b8d8c955b77483af4bdfb_1.181988.9ca9b674462.d954e6c2b60b8d8c955b77483af4bdfb
+pkgver=24.0.0_devel_1.181988.9ca9b674462.d954e6c2b60b8d8c955b77483af4bdfb
 pkgrel=1
 pkgdesc="An open-source implementation of the OpenGL specification"
 url="https://www.mesa3d.org/"
@@ -47,6 +47,7 @@ makedepends=(
   'zstd'
 
   # shared between mesa and lib32-mesa
+  'git'
   'clang'
   'cmake'
   'elfutils'
@@ -160,7 +161,7 @@ build() {
     -D shared-glapi=enabled
     -D valgrind=enabled
     -D video-codecs=vc1dec,h264dec,h264enc,h265dec,h265enc,av1dec,av1enc,vp9dec
-    -D vulkan-drivers=amd,intel,swrast,virtio
+    -D vulkan-drivers=amd,swrast,virtio
     -D vulkan-layers=device-select,overlay
     -D vulkan-beta=true
     -D opencl-spirv=true
