Do not fail due to not packaging intel stuff

--- a/lib32-mesa/PKGBUILD
+++ b/lib32-mesa/PKGBUILD
@@ -419,7 +419,7 @@ package_lib32-mesa() {
   ln -sr "$pkgdir"/$_libdir/libGLX_{mesa,indirect}.so.0
 
   # make sure there are no files left to install
-  find fakeinstall -depth -print0 | xargs -0 rmdir
+  #find fakeinstall -depth -print0 | xargs -0 rmdir
 
   install -m644 -Dt "${pkgdir}/usr/share/licenses/${pkgname}" LICENSE
 }
