--- a/lib32-mesa/PKGBUILD
+++ b/lib32-mesa/PKGBUILD
@@ -22,6 +22,10 @@ url="https://www.mesa3d.org/"
 arch=('x86_64')
 license=('custom')
 makedepends=(
+  'pkg-config'
+  'bison'
+  'lib32-flex'
+
   'lib32-clang'
   'lib32-expat'
   'lib32-libdrm'
@@ -46,7 +50,6 @@ makedepends=(
   'lib32-zstd'
 
   # shared between mesa and lib32-mesa
-  'git'
   'clang'
   'cmake'
   'elfutils'
@@ -84,7 +87,7 @@ prepare() {
   # Include package release in version string so Chromium invalidates
   # its GPU cache; otherwise it can cause pages to render incorrectly.
   # https://bugs.launchpad.net/ubuntu/+source/chromium-browser/+bug/2020604
-  echo "$pkgver-$pkgrel" >VERSION
+  echo "$pkgver-$epoch.$pkgrel" >VERSION
 
   local src
   for src in "${source[@]}"; do
@@ -94,11 +97,6 @@ prepare() {
     echo "Applying patch $src..."
     patch -Np1 < "../$src"
   done
-
-  # Include package release in version string so Chromium invalidates
-  # its GPU cache; otherwise it can cause pages to render incorrectly.
-  # https://bugs.launchpad.net/ubuntu/+source/chromium-browser/+bug/2020604
-  echo "$pkgver-$epoch.$pkgrel" >VERSION
 }
 
 build() {
