--- a/mesa/PKGBUILD
+++ b/mesa/PKGBUILD
@@ -22,6 +22,9 @@ url="https://www.mesa3d.org/"
 arch=('x86_64')
 license=('custom')
 makedepends=(
+  'pkg-config'
+  'bison'
+  'flex'
   'clang'
   'expat'
   'libdrm'
@@ -47,7 +50,6 @@ makedepends=(
   'zstd'
 
   # shared between mesa and lib32-mesa
-  'git'
   'clang'
   'cmake'
   'elfutils'
@@ -95,7 +97,7 @@ prepare() {
   # Include package release in version string so Chromium invalidates
   # its GPU cache; otherwise it can cause pages to render incorrectly.
   # https://bugs.launchpad.net/ubuntu/+source/chromium-browser/+bug/2020604
-  echo "$pkgver-$pkgrel" >VERSION
+  echo "$pkgver-$epoch.$pkgrel" >VERSION
 
   for src in "${source[@]}"; do
     src="${src%%::*}"
@@ -104,8 +106,6 @@ prepare() {
     echo "Applying patch $src..."
     patch -Np1 < "../$src"
   done
-
-  echo ${_ver/-/_}.$(git rev-list --count HEAD).$(git rev-parse --short HEAD).${_patchver}
 }
 
 build() {
