Change version number

--- a/mesa/PKGBUILD
+++ b/mesa/PKGBUILD
@@ -15,7 +15,7 @@ pkgname=(
   'mesa-vdpau'
   'mesa'
 )
-pkgver=24.0.0_devel
+pkgver=23.3.3
 pkgrel=1
 pkgdesc="An open-source implementation of the OpenGL specification"
 url="https://www.mesa3d.org/"
