Make sure build type is release

--- a/lib32-mesa/PKGBUILD
+++ b/lib32-mesa/PKGBUILD
@@ -135,6 +135,7 @@ build() {
     -D vulkan-layers=device-select,overlay
     -D vulkan-beta=true
     -D opencl-spirv=true
+    -D buildtype=release
   )
 
   # Build only minimal debug info to reduce size
@@ -143,7 +144,7 @@ build() {
 
   export BINDGEN_EXTRA_CLANG_ARGS="-m32"
 
-  arch-meson mesa build "${meson_options[@]}"
+  meson setup --prefix /usr --libexecdir lib --sbindir bin --auto-features enabled --wrap-mode nodownload -D b_lto=false -D b_pie=true -D python.bytecompile=1 mesa build "${meson_options[@]}"
   meson configure build --no-pager # Print config
 
   #if [ ! -f "build/build.ninja.bak" ]; then
