--- a/mesa/PKGBUILD
+++ b/mesa/PKGBUILD
@@ -140,13 +140,14 @@ build() {
     -D vulkan-layers=device-select,overlay
     -D vulkan-beta=true
     -D opencl-spirv=true
+    -D buildtype=release
   )
 
   # Build only minimal debug info to reduce size
   #CFLAGS+=' -g1'
   #CXXFLAGS+=' -g1'
 
-  arch-meson mesa build "${meson_options[@]}"
+  meson setup --prefix /usr --libexecdir lib --sbindir bin --auto-features enabled --wrap-mode nodownload -D b_lto=false -D b_pie=true -D python.bytecompile=1 mesa build "${meson_options[@]}"
   meson configure build --no-pager # Print config
   $NINJAFLAGS meson compile -C build
 
