--- a/mesa/PKGBUILD
+++ b/mesa/PKGBUILD
@@ -22,6 +22,7 @@ url="https://www.mesa3d.org/"
 arch=('x86_64')
 license=('custom')
 makedepends=(
+  'debugedit'
   'pkg-config'
   'bison'
   'flex'
@@ -143,9 +144,9 @@ build() {
     -D buildtype=release
   )
 
-  # Build only minimal debug info to reduce size
-  #CFLAGS+=' -g1'
-  #CXXFLAGS+=' -g1'
+  # Build with no debug info to reduce size
+  CFLAGS+=' -g0'
+  CXXFLAGS+=' -g0'
 
   meson setup --prefix /usr --libexecdir lib --sbindir bin --auto-features enabled --wrap-mode nodownload -D b_lto=false -D b_pie=true -D python.bytecompile=1 mesa build "${meson_options[@]}"
   meson configure build --no-pager # Print config
