Remove virtio and use 24.0.0

--- a/lib32-mesa/PKGBUILD
+++ b/lib32-mesa/PKGBUILD
@@ -10,12 +10,11 @@ pkgname=(
   'lib32-opencl-rusticl-mesa'
   'lib32-vulkan-radeon'
   'lib32-vulkan-swrast'
-  'lib32-vulkan-virtio'
   'lib32-libva-mesa-driver'
   'lib32-mesa-vdpau'
   'lib32-mesa'
 )
-pkgver=23.3.3
+pkgver=24.0.0
 pkgrel=1
 pkgdesc="An open-source implementation of the OpenGL specification (32-bit)"
 url="https://www.mesa3d.org/"
@@ -64,7 +63,7 @@ makedepends=(
 
 )
 source=(
-  'https://github.com/NeroReflex/mesa/archive/refs/tags/v23.3.3-av1-vulkan1.3.277.tar.gz'
+  'https://github.com/NeroReflex/mesa/archive/refs/tags/v24.0.0.tar.gz'
   LICENSE
 )
 b2sums=('SKIP'
@@ -131,7 +130,7 @@ build() {
     -D shared-glapi=enabled
     -D valgrind=disabled
     -D video-codecs=vc1dec,h264dec,h264enc,h265dec,h265enc,av1enc,av1dec,vp9dec
-    -D vulkan-drivers=amd,swrast,virtio
+    -D vulkan-drivers=amd,swrast
     -D vulkan-layers=device-select,overlay
     -D vulkan-beta=true
     -D opencl-spirv=true
@@ -139,12 +138,12 @@ build() {
   )
 
   # Build with no debug info to reduce size
-  CFLAGS+=' -g0'
-  CXXFLAGS+=' -g0'
+  CFLAGS+=' -g0 -O2 '
+  CXXFLAGS+=' -g0 -O2 '
 
   export BINDGEN_EXTRA_CLANG_ARGS="-m32"
 
-  meson setup --prefix /usr --libexecdir lib --sbindir bin --auto-features enabled --wrap-mode nodownload -D b_lto=false -D b_pie=true -D python.bytecompile=1 mesa build "${meson_options[@]}"
+  meson setup --prefix /usr --libexecdir lib --sbindir bin --auto-features enabled --wrap-mode nodownload -D b_lto=true -D b_pie=true -D python.bytecompile=1 mesa build "${meson_options[@]}"
   meson configure build --no-pager # Print config
 
   #if [ ! -f "build/build.ninja.bak" ]; then
@@ -291,26 +290,6 @@ package_lib32-vulkan-swrast() {
 
   _install fakeinstall/usr/share/vulkan/icd.d/lvp_icd*.json
   _install fakeinstall/$_libdir/libvulkan_lvp.so
-
-  install -m644 -Dt "${pkgdir}/usr/share/licenses/${pkgname}" LICENSE
-}
-
-package_lib32-vulkan-virtio() {
-  pkgdesc="Venus Vulkan mesa driver for Virtual Machines (32-bit)"
-  depends=(
-    'lib32-libdrm'
-    'lib32-libx11'
-    'lib32-libxshmfence'
-    'lib32-systemd'
-    'lib32-wayland'
-    'lib32-xcb-util-keysyms'
-    'lib32-zstd'
-  )
-  optdepends=('lib32-vulkan-mesa-layers: additional vulkan layers')
-  provides=('lib32-vulkan-driver')
-
-  _install fakeinstall/usr/share/vulkan/icd.d/virtio_icd*.json
-  _install fakeinstall/$_libdir/libvulkan_virtio.so
 
   install -m644 -Dt "${pkgdir}/usr/share/licenses/${pkgname}" LICENSE
 }
