--- a/lib32-mesa/PKGBUILD
+++ b/lib32-mesa/PKGBUILD
@@ -15,7 +15,7 @@ pkgname=(
   'lib32-mesa'
 )
 pkgver=24.0.0
-pkgrel=3
+pkgrel=4
 pkgdesc="An open-source implementation of the OpenGL specification (32-bit)"
 url="https://www.mesa3d.org/"
 arch=('x86_64')
@@ -143,7 +143,7 @@ build() {
 
   export BINDGEN_EXTRA_CLANG_ARGS="-m32"
 
-  meson setup --prefix /usr --libexecdir lib --sbindir bin --auto-features enabled --wrap-mode nodownload -D b_lto=true -D b_pie=true -D python.bytecompile=1 mesa build "${meson_options[@]}"
+  meson setup --prefix /usr --libexecdir lib --sbindir bin --auto-features enabled --wrap-mode nodownload -D b_lto=false -D b_pie=true -D python.bytecompile=1 mesa build "${meson_options[@]}"
   meson configure build --no-pager # Print config
 
   #if [ ! -f "build/build.ninja.bak" ]; then
