--- a/mesa/PKGBUILD
+++ b/mesa/PKGBUILD
@@ -15,7 +15,7 @@ pkgname=(
   'mesa'
 )
 pkgver=24.0.0
-pkgrel=2
+pkgrel=4
 pkgdesc="An open-source implementation of the OpenGL specification"
 url="https://www.mesa3d.org/"
 arch=('x86_64')
@@ -147,7 +147,7 @@ build() {
   CFLAGS+=' -g0 -O2 '
   CXXFLAGS+=' -g0 -O2 '
 
-  meson setup --prefix /usr --libexecdir lib --sbindir bin --auto-features enabled --wrap-mode nodownload -D b_lto=true -D b_pie=true -D python.bytecompile=1 mesa build "${meson_options[@]}"
+  meson setup --prefix /usr --libexecdir lib --sbindir bin --auto-features enabled --wrap-mode nodownload -D b_lto=false -D b_pie=true -D python.bytecompile=1 mesa build "${meson_options[@]}"
   meson configure build --no-pager # Print config
   $NINJAFLAGS meson compile -C build
 
