Disable unnecessary hardware/drivers, compiling for x86-64-v2 and tune for zen4 instead of targeting zen4 only

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,7 +44,8 @@ jobs:
       - name: Customize makepkg.conf
         run: |
           sed -i -e 's/BUILDENV=(!distcc color !ccache check !sign)/BUILDENV=(!distcc color !ccache !check !sign)/g' /etc/makepkg.conf
-          sed -i -e 's/-march=x86-64 -mtune=generic/-march=znver4/g' /etc/makepkg.conf
+          sed -i -e 's/-march=x86-64/-march=x86-64-v2/g' /etc/makepkg.conf
+          sed -i -e 's/-mtune=generic/-mtune=znver4/g' /etc/makepkg.conf
       - name: Install dependencies (mesa)
         run: |
           pacman -Syu --noconfirm $(sed -n -e 's/^[[:space:]]*\(make\)\?depends\(_x86_64\)\? = \([[:alnum:][:punct:]]*\)[[:space:]]*$/\3/p' /home/build/mesa/.SRCINFO)
