--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,7 +43,8 @@ jobs:
           su build bash -c "cd /home/build/lib32-mesa && makepkg --printsrcinfo > /home/build/lib32-mesa/.SRCINFO"
       - name: Customize makepkg.conf
         run: |
-          sed -i -e 's/BUILDENV=(!distcc color !ccache check !sign)/BUILDENV=(!distcc color !ccache !check !sign)/g' /etc/makepkg.conf
+          sed -i '/BUILDENV/s/check/!check/g' /etc/makepkg.conf
+          sed -i '/OPTIONS/s/debug/!debug/g' /etc/makepkg.conf
           sed -i -e 's/-march=x86-64/-march=x86-64-v3/g' /etc/makepkg.conf
           sed -i -e 's/-mtune=generic/-mtune=znver4/g' /etc/makepkg.conf
       - name: Install dependencies (mesa)
